tweak small screen sizes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,8 @@ $card-height: 90px;
 $card-height-mobile: 60px;
 $card-height-small-mobile: 40px;
 
-$card-padding: 20px;
-$card-padding-mobile: 7px;
+$card-padding: 20px 0;
+$card-padding-mobile: 7px 0;
 
 $shape-height: 60px;
 $shape-height-mobile: 40px;
